add swagger-ui with openapi
